# obj2pov

./: CMakeLists.txt  README.md
include/: obj2pov.cpp  obj2pov.h
test/: main.cpp
